代码添加注释和规范化